--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,9 @@
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
+    },
+    "rules": {
+        "require-await": "error",
+        "eqeqeq": ["error", "always", {"null": "ignore"}]
     }
 }
